# project-asi-felis-origin

./: .gitignore  CMakeLists.txt  Modelfile  README.md  SDK_COVERAGE.md  TESTING_LOG.md  main.cpp  test_hand_tracking.py
docs/: M1_mediapipe_depth_validation_20260429.md
docs/ui-simulator/: README.md  ellipsoid_v6.html  ellipsoid_v7.html  ellipsoid_v8.html  ellipsoid_v9.html  polar_ui_v2.html  polar_ui_v3.html  polar_ui_v4.html  polar_ui_v5.html
scripts/: asi_vision_test.py  test_hand_tracking.py  windows_mediapipe_native.py  windows_mediapipe_websocket.py  wsl2_camera_diagnostic.sh
sdk/: README.md
